Landing lead email + branding + master login/dashboard theme

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 ABACATEPAY_API_KEY=
 ABACATEPAY_PUBLIC_KEY=
 ABACATEPAY_WEBHOOK_SECRET=
+RESEND_API_KEY=
+LEADS_NOTIFY_EMAIL=support@pedezap.site
+LEADS_FROM_EMAIL=PedeZap <noreply@pedezap.site>
