--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 AUTH_SESSION_SECRET=change-this-to-a-long-random-secret
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Optional: persist JSON store in a stable path (recommended in production)
+# STORE_FILE_PATH=/var/data/store.json
 ABACATEPAY_API_KEY=
 ABACATEPAY_PUBLIC_KEY=
 ABACATEPAY_WEBHOOK_SECRET=
