feat: neon persistence, admin bootstrap login, render/node fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 AUTH_SESSION_SECRET=change-this-to-a-long-random-secret
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+DATABASE_URL=
+ADMIN_MASTER_EMAIL=
+ADMIN_MASTER_PASSWORD=
+ADMIN_MASTER_NAME=
 # Optional: persist JSON store in a stable path (recommended in production)
 # STORE_FILE_PATH=/var/data/store.json
 ABACATEPAY_API_KEY=
