fix: ajustes deploy railway

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 AUTH_SESSION_SECRET=change-this-to-a-long-random-secret
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 DATABASE_URL=
+REQUIRE_DATABASE=true
 ADMIN_MASTER_EMAIL=
 ADMIN_MASTER_PASSWORD=
 ADMIN_MASTER_NAME=
