Add security, AI marketing tools, and delivery logistics upgrades

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,6 @@ ABACATEPAY_WEBHOOK_SECRET=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 RESEND_API_KEY=
+GEMINI_API_KEY=
 LEADS_NOTIFY_EMAIL=support@pedezap.site
 LEADS_FROM_EMAIL=PedeZap <noreply@pedezap.site>
